# cells-tool-registry

./: .gitignore  CONTRIBUTING.md  README.md  install.sh
tools/airtable/: CLAUDE.md  README.md  airtable  airtable.py  setup.sh
tools/cal-com/: README.md  cal-com.py  setup.sh
tools/cloudflare-images/: CLAUDE.md  PACKAGE.md  PACKAGE_INFO.md  cf-images  setup.sh  test_cf_images.py
tools/cloudflare-images/examples/: batch-upload.sh  postcard-workflow.sh
tools/cloudflare-workers/: CLAUDE.md  CLI-DOCUMENTATION.md  README.md  cf-cli.py  setup.sh
tools/cloudflare-workers/test-hello/: index.js
tools/current_time/: CLAUDE.md  README.md  current_time.py  pyproject.toml
tools/current_time/tests/: __init__.py  test_current_time.py
tools/dice-roller/: CLAUDE.md  README.md  __init__.py  design.md  dice_roller.py  parser.py  progress.json  pyproject.toml  roller.py
tools/dice-roller/tests/: test_cli.py  test_parser.py  test_roller.py
tools/echo-tool/: CLAUDE.md  README.md  echo-tool.py  pyproject.toml
tools/echo-tool/tests/: test_echo_tool.py
tools/gmail-tool/: README.md  gmail_advanced.py  gmail_cli.py  gmail_cli_old.py  gmail_enhanced.py  gmail_service_compat.py  gmail_unified.py  requirements.txt  setup.sh
tools/google-calendar/: README.md  README.md.old  gcal_auth.py  gcal_cli.py  requirements.txt  setup.sh
tools/google-maps/: README.md  everest_coords.txt  google-maps-working.py  requirements.txt  setup.sh
tools/grok-tool/: CLAUDE.md  README.md  grok_cli.py  requirements.txt  setup.sh
tools/image-gen-tool/: CLAUDE.md  README.md  example_usage.md  generate_image.py
tools/raycast-cli/: CLAUDE.md  README.md  raycast-cli.py  setup.sh
tools/raycast-cli/examples/: clipboard-history.py  google-search.sh  open-project.sh  quick-note.sh  system-info.py
tools/square/: README.md  requirements.txt  setup.sh  square_cli.py
tools/test-publish/: README.md  test-publish.py
tools/time-tool/: CLAUDE.md  README.md  get-current-time.sh
tools/typefully-tool/: .gitignore  requirements.txt  setup.py  typefully_cli.py
tools/typefully-tool/tests/: __init__.py  (+2 more)
tools/weather-cli/: CLAUDE.md  DESIGN.md  README.md  progress.json  pyproject.toml  weather_cli.py
tools/weather-cli/tests/: test_weather_cli.py
(+9 files in other folders)
