[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dice-roller"
version = "1.0.0"
description = "A simple dice rolling CLI tool for tabletop gaming"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
dice-roller = "dice_roller:main"
dice = "dice_roller:main"

[tool.setuptools]
py-modules = ["dice_roller", "parser", "roller"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"